--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/index.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/index.html
@@ -16,6 +16,7 @@
           integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script src="https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
+  <script src="https://www.paypal.com/sdk/js?client-id=Aet4gqcdYLN7ux-A76cX-nfVNMsJSurHV2r3CaRDoNjVLOPx3h1o1UmIqRYSVUIImvNOvTX65CPEEGni"></script>
 </head>
 <body>
   <app-root></app-root>
